--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="row min-vh-100 no-gutters">
     <!-- header element -->
     <header class="col-12 col-lg-3 bg-dark text-light sticky-top d-flex flex-column p-4 p-lg-3">
-      <h1 class="text-center"><span class="oi oi-task d-inline d-lg-none"></span>Taskmaster Pro Edition</h1>
+      <h1 class="text-center"><span class="oi oi-task d-inline d-lg-none mr-2"></span>Taskmaster Pro Edition</h1>
       <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal"><span class="oi oi-plus mr-2"></span>Add
         Task</button>
       <button id="remove-tasks" class="btn btn-block btn-danger"><span class="oi oi-trash mr-2"></span>Delete All Tasks</button>
@@ -70,9 +70,9 @@
             </div>
             <!-- done end -->
         </div>
-        <div id="trash" class="mt-auto">
-            <div class="w-100 bg-danger p-3 text-center text-light display-4">
-                <span class="oi oi-trash mr-2"></span>Drop Here to Remove.
+        <div id="trash" class="mt-auto overflow-hidden">
+            <div class="w-100 p-3 text-center bottom-trash">
+                <span class="oi oi-trash mx-auto mb-4"></span>Drop Here to Remove.
             </div>
         </div>
     </main>
